@@ -90,6 +90,7 @@ cl_symbols[] = {
 {SYS_ "UNBOUND", SI_ORDINARY, NULL, -1, ECL_UNBOUND},
 #endif
 {SYS_ "PROTECT-TAG", SI_ORDINARY, NULL, -1, OBJNULL},
+{SYS_ "*RESTART-CLUSTERS*", SI_SPECIAL, NULL, -1, Cnil},
 
 /* LISP PACKAGE */
 {"&ALLOW-OTHER-KEYS", CL_ORDINARY, NULL, -1, OBJNULL},
@@ -2303,6 +2304,8 @@ cl_symbols[] = {
 {FFI_ "WITH-FOREIGN-OBJECTS", FFI_ORDINARY, NULL, -1, OBJNULL},
 {FFI_ "WITH-FOREIGN-STRING", FFI_ORDINARY, NULL, -1, OBJNULL},
 {FFI_ "WITH-FOREIGN-STRINGS", FFI_ORDINARY, NULL, -1, OBJNULL},
+
+{SYS_ "BIND-SIMPLE-RESTARTS", SI_ORDINARY, si_bind_simple_restarts, 2, OBJNULL},
 
 /* Tag for end of list */
 {NULL, CL_ORDINARY, NULL, -1, OBJNULL}};
