@@ -414,6 +414,23 @@ extern ECL_API ecl_frame_ptr _ecl_frs_push(register cl_env_ptr, register cl_obje
 #define ECL_CATCH_END } \
 	ecl_frs_pop(__the_env); } while (0)
 
+#define ECL_RESTARTS_TRY(the_env, tag, names) do {			\
+	const cl_env_ptr __the_env = (the_env);				\
+	const cl_object __ecl_tag = (tag);				\
+	ecl_bds_bind(__the_env, ECL_RESTART_CLUSTERS,			\
+		     si_bind_simple_restarts(__ecl_tag, names));	\
+	if (ecl_frs_push(__the_env,__ecl_tag) == 0) {
+
+#define ECL_RESTARTS_CATCH(code, args)					\
+	} else if (__the_env->values[1] == ecl_make_fixnum(code)) {	\
+	const cl_object args = __the_env->values[0];
+	
+
+#define ECL_RESTARTS_END }			\
+		ecl_frs_pop(__the_env);		\
+		ecl_bds_unwind1(__the_env);	\
+		} while (0)
+
 #if defined(_MSC_VER)
 # define ECL_CATCH_ALL_BEGIN(the_env) do {			\
 	const cl_env_ptr __the_env = (the_env);			\
