@@ -58,6 +58,9 @@ ECL 12.2.2:
 
  - APROPOS-LIST no longer returns duplicate symbols.
 
+ - The ABORT restart is now bound on every new thread (except the main one,
+   where either the user or the toplevel must take care of that).
+
 * Windows:
 
  - ECL guesses whether the input / output / error streams are consoles. If
